--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 - Read/write worlds from/to file.
+  - This is probably important for debugging some stuff.
 - depth map
 - --vfov cmdline arg
 - saving images
