Turned on "wrap_help" for clap.

--- a/TODO
+++ b/TODO
@@ -5,3 +5,7 @@
 - get rid of 'unwraps' in main.rs
 - allow switching between the two tracers.
 - add second level of progress meter
+- move rendering and coloring changes out of main and into the lib.
+- write maybe_add_extension() in util.rs (and figure out a better name)
+- replace my homegrown args parsing with clap::value_t!()
+- move to structopt
